Clean gradle build script from trash.