@@ -27,46 +27,40 @@
 */
 
 plugins {
+  // https://docs.gradle.org/current/userguide/application_plugin.html
   id 'application'
-
+  // https://docs.gradle.org/current/userguide/groovy_plugin.html
   id 'groovy'
-
+  // https://docs.gradle.org/current/userguide/eclipse_plugin.html
+  id 'eclipse'
+  // https://docs.gradle.org/current/userguide/project_report_plugin.html
+  id 'project-report'
+  // https://docs.gradle.org/current/userguide/build_dashboard_plugin.html
+  id 'build-dashboard'
   // https://docs.gradle.org/current/userguide/checkstyle_plugin.html
+  // https://checkstyle.org/index.html
   id 'checkstyle'
-
   // https://docs.gradle.org/current/userguide/pmd_plugin.html
+  // https://pmd.github.io/latest/
   id 'pmd'
-
+  // https://docs.gradle.org/current/userguide/codenarc_plugin.html
+  // https://codenarc.github.io/CodeNarc/
+  id 'codenarc'
+  // https://docs.gradle.org/current/userguide/jacoco_plugin.html
+  // https://www.eclemma.org/jacoco/
+  id 'jacoco'
   // https://github.com/aaschmid/gradle-cpd-plugin
   id 'de.aaschmid.cpd' version '3.1'
-
   // https://github.com/spotbugs/spotbugs-gradle-plugin
   id 'com.github.spotbugs' version '4.4.4'
-
-  // https://github.com/CodeNarc/CodeNarc
-  id 'codenarc'
-
-  // https://docs.gradle.org/current/userguide/jacoco_plugin.html
-  id 'jacoco'
-
   // https://badass-jlink-plugin.beryx.org
   id 'org.beryx.jlink' version '2.20.0'
-
   // https://github.com/hierynomus/license-gradle-plugin
   id 'com.github.hierynomus.license' version '0.15.0'
-
   // https://github.com/ben-manes/gradle-versions-plugin
   id 'com.github.ben-manes.versions' version '0.28.0'
-
   // https://github.com/researchgate/gradle-release
   id 'net.researchgate.release' version '2.8.1'
-
-  id 'eclipse'
-
-  id 'project-report'
-
-  id 'build-dashboard'
-
   // https://github.com/Akman/vscode-tasks
   id 'ru.akman.vscode-tasks' version '0.4.0'
 }
@@ -75,30 +69,12 @@ repositories {
   jcenter()
 }
 
-// Properties
-// new ru.akman.utils.PropertiesMap("${projectDir}/project.properties")
-//     .getProperties()
-//     .each {
-//   logger.lifecycle('{} = {}', it.key, it.value)
-//   ext.set(it.key, it.value);
-// }
-
 ext {
   // Java
-  javaVersion = JavaVersion.VERSION_13 // JavaVersion.current()
-
-  // JavaFX
-  javaFXVersion = '15-ea+6'
+  javaVersion = JavaVersion.VERSION_13
 
   // Encoding
   defaultEncoding = 'UTF-8'
-
-  // Tools
-  checkstyleVersion = '8.34'
-  pmdVersion = '6.25.0'
-  spotbugsVersion = '4.0.6'
-  codenarcVersion = '1.6'
-  jacocoVersion = '0.8.5'
 
   // Application
   applicationName = 'Java Boilerplate Project'
@@ -147,6 +123,7 @@ ext {
   os = org.gradle.internal.os.OperatingSystem.current()
   platformModifier = os.isWindows() ? 'win' : (os.isLinux() ? 'linux' : 'mac')
   platformFamily = os.isWindows() ? 'windows' : (os.isLinux() ? 'linux' : 'mac')
+
   switch (platformFamily) {
     case 'windows':
       platformImageName = 'Launcher'
@@ -157,7 +134,6 @@ ext {
       ]
       platformJvmArgs = applicationJvmArgs + [
         "-Dfile.encoding=${defaultEncoding}",
-        '-splash:$ROOTDIR/splash.png'
       ]
       platformInstallDir = "${applicationVendor}/${platformImageName}"
       platformMenuGroup = "${applicationVendor}/${platformImageName}"
@@ -172,7 +148,6 @@ ext {
       ]
       platformJvmArgs = applicationJvmArgs + [
           "-Dfile.encoding=${defaultEncoding}",
-          '-splash:$ROOTDIR/splash.png'
       ]
       platformInstallDir = "${applicationVendor}/${platformImageName}"
       platformMenuGroup = "${applicationVendor}/${platformImageName}"
@@ -187,7 +162,6 @@ ext {
       ]
       platformJvmArgs = applicationJvmArgs + [
           "-Dfile.encoding=${defaultEncoding}",
-          '-splash:$ROOTDIR/splash.png'
       ]
       platformInstallDir = "${applicationVendor}/${platformImageName}"
       platformMenuGroup = "${applicationVendor}/${platformImageName}"
@@ -205,7 +179,6 @@ ext {
   jlinkImageDir = "${jlinkDir}/runtime-image"
 
   // JPackage
-  jpackageCommonConfigDir = "${projectDir}/package"
   jpackageConfigDir = "${projectDir}/package/${platformFamily}"
   jpackageResourcesDir = "${jpackageConfigDir}/resources"
   jpackageDir = "${buildDir}/jpackage"
@@ -213,13 +186,16 @@ ext {
 
   // Log
   logDir = file("${projectDir}/log")
-}
+  
+  // Tools
+  checkstyleVersion = '8.34'
+  pmdVersion = '6.25.0'
+  spotbugsVersion = '4.0.6'
+  codenarcVersion = '1.6'
+  jacocoVersion = '0.8.5'
 
-java {
-  sourceCompatibility = javaVersion
-  targetCompatibility = javaVersion
-  // releaseCompatibility = javaVersion
-  modularity.inferModulePath.set(true)  
+  // Dependencies  
+  javafxVersion = '15-ea+6'
 }
 
 dependencies {
@@ -228,39 +204,48 @@ dependencies {
   )
   implementation(
     // JavaFX
-    "org.openjfx:javafx-base:${javaFXVersion}:${platformModifier}",
-    "org.openjfx:javafx-controls:${javaFXVersion}:${platformModifier}",
-    "org.openjfx:javafx-graphics:${javaFXVersion}:${platformModifier}",
-    "org.openjfx:javafx-fxml:${javaFXVersion}:${platformModifier}",
-    "org.openjfx:javafx-swing:${javaFXVersion}:${platformModifier}",
-    //"org.openjfx:javafx-web:${javaFXVersion}:${platformModifier}",
-    //"org.openjfx:javafx-media:${javaFXVersion}:${platformModifier}",
+    "org.openjfx:javafx-base:${javafxVersion}:${platformModifier}",
+    "org.openjfx:javafx-controls:${javafxVersion}:${platformModifier}",
+    "org.openjfx:javafx-graphics:${javafxVersion}:${platformModifier}",
+    "org.openjfx:javafx-fxml:${javafxVersion}:${platformModifier}",
+    "org.openjfx:javafx-swing:${javafxVersion}:${platformModifier}",
+    //"org.openjfx:javafx-web:${javafxVersion}:${platformModifier}",
+    //"org.openjfx:javafx-media:${javafxVersion}:${platformModifier}",
+    // Picocli
+    'info.picocli:picocli:4.3.2',
     // SLF4J + Logback
     'org.slf4j:slf4j-api:2.0.0-alpha1',
     'ch.qos.logback:logback-classic:1.3.0-alpha4',
-    'ch.qos.logback:logback-core:1.3.0-alpha4',
-    // Picocli
-    'info.picocli:picocli:4.3.2'
   )
   testImplementation(
     // JUpiter
     'org.junit.jupiter:junit-jupiter-api:5.7.0-M1',
-    'org.junit.jupiter:junit-jupiter-params:5.7.0-M1',
-    // JUnit 5
-    'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1',
-    // JUnit 4 for Spock only
-    'org.junit.vintage:junit-vintage-engine:5.7.0-M1',
     // Spock
     'org.spockframework:spock-core:2.0-M3-groovy-3.0',
-    'org.spockframework:spock-junit4:2.0-M3-groovy-3.0',
     // Mockito
-    'org.mockito:mockito-core:3.3.3',
     'org.mockito:mockito-junit-jupiter:3.3.3',
     // Hamcrest
     // 'org.hamcrest:hamcrest:2.2',
     // AssertJ
     // 'org.assertj:assertj-core:3.16.1',
   )
+  testRuntimeOnly(
+    // JUnit 5
+    'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1',
+  )
+}
+
+java {
+  sourceCompatibility = javaVersion
+  targetCompatibility = javaVersion
+  modularity.inferModulePath = true
+}
+
+application {
+  mainModule = applicationModuleName
+  mainClass = applicationClassName
+  applicationDefaultJvmArgs = platformJvmArgs
+  applicationName = platformImageName
 }
 
 eclipse {
@@ -307,42 +292,9 @@ clean {
     '-Xlint:deprecation',
     // Terminate compilation if warnings occur.
     '-Werror',
+    // Picocli annotation processor
     "-Aproject=${project.group}/${project.name}"
   ]
-}
-
-// compileJava {
-//   doFirst {
-//     options.compilerArgs += [
-//       '--module-path', classpath.asPath,
-//     ]
-//     classpath = files()
-//     [
-//       // 'javafx.base',
-//       // 'javafx.graphics',
-//       // 'javafx.controls',
-//       // 'javafx.fxml',
-//       // 'javafx.swing',
-//       // // 'javafx.web',
-//       // // 'javafx.media',
-//       // // SLF4J + Logback
-//       // 'org.slf4j',
-//       // 'ch.qos.logback.classic',
-//       // 'java.naming',
-//       // 'java.management',
-//     ].each {
-//       options.compilerArgs += [
-//         '--add-modules', it
-//       ]
-//     }
-//   }
-// }
-
-application {
-  // for jlink
-  mainClassName = applicationClassName
-  applicationDefaultJvmArgs = applicationJvmArgs
-  applicationName = platformImageName
 }
 
 task processFilteredResources(type: Copy) {
@@ -383,7 +335,9 @@ processTestResources {
 
 test {
   useJUnitPlatform()
-  jvmArgs = []
+  jvmArgs = [
+    "-Dfile.encoding=${defaultEncoding}",
+  ]
   reports {
     html.enabled = true
   }
@@ -420,11 +374,45 @@ tasks.withType(Test) {
 
 javadoc {
   failOnError = false
-  //exclude '**/module-info.java'
   options.encoding defaultEncoding
   options.addStringOption 'bottom', applicationCopyright
   options.addBooleanOption 'html5', true
   options.addBooleanOption 'notimestamp', true
+}
+
+jar {
+  manifest {
+    attributes(
+      'Main-Class': "${applicationClassName}",
+      'Specification-Title': "${applicationName}",
+      'Specification-Version': "${project.version}",
+      'Specification-Vendor': "${applicationVendor}",
+      'Implementation-Title': "${applicationModuleName}",
+      'Implementation-Version': "${project.version}",
+      'Implementation-Vendor': "${applicationVendor}",
+    )
+  }
+}
+
+task fatJar(type: Jar) {
+  archiveAppendix = 'full'
+  manifest {
+    attributes(
+      'Main-Class': "${applicationClassName}",
+      'Specification-Title': "${applicationName}",
+      'Specification-Version': "${version}",
+      'Specification-Vendor': "${applicationVendor}",
+      'Implementation-Title': "${applicationModuleName}",
+      'Implementation-Version': "${version}",
+      'Implementation-Vendor': "${applicationVendor}",
+    )
+  }
+  from {
+    configurations.runtimeClasspath.collect {
+      it.isDirectory() ? it : zipTree(it)
+    }
+  }
+  with jar
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -438,101 +426,43 @@ task javadocJar(type: Jar, dependsOn: classes) {
 }
 
 artifacts {
-  archives sourcesJar, javadocJar
+  archives sourcesJar, javadocJar, fatJar
 }
 
-jar {
-  manifest {
-    attributes(
-      'Main-Class': "${applicationClassName}",
-      // 'Class-Path': configurations.runtimeClasspath.collect { it.getName() }
-      //     .join(' '),
-      'Specification-Title': "${applicationName}",
-      'Specification-Version': "${project.version}",
-      'Specification-Vendor': "${applicationVendor}",
-      'Implementation-Title': "${applicationModuleName}",
-      'Implementation-Version': "${project.version}",
-      'Implementation-Vendor': "${applicationVendor}"
-    )
+distributions {
+  main {
+    contents {
+      from(javadocJar) {
+        into 'docs'
+      }
+      from(sourcesJar) {
+        into 'docs'
+      }
+    }
   }
 }
 
-// task fatJar(type: Jar) {
-//   archiveAppendix = 'full'
-//   manifest {
-//     attributes(
-//       'Main-Class': "${applicationClassName}",
-//       'Specification-Title': "${applicationName}",
-//       'Specification-Version': "${version}",
-//       'Specification-Vendor': "${applicationVendor}",
-//       'Implementation-Title': "${applicationModuleName}",
-//       'Implementation-Version': "${version}",
-//       'Implementation-Vendor': "${applicationVendor}"
-//     )
+// startScripts {
+//   doFirst {
+//     defaultJvmOpts = [
+//     ]
 //   }
-//   from {
-//     configurations.runtimeClasspath.collect {
-//       it.isDirectory() ? it : zipTree(it)
-//     }
+//   doLast{
+//     def bashFile = new File(outputDir, applicationLauncherName)
+//     String bashContent = bashFile.text
+//     bashFile.text = bashContent
+//         .replaceFirst(/(?m)^media\/gradle\.icns$/, 'media/app.icns')
+//     def batFile = new File(outputDir, applicationLauncherName + ".bat")
+//     String batContent = batFile.text
+//     batFile.text = batContent
+//         .replaceFirst(/(?m)^media\/gradle\.icns$/, 'media/app.icns')
 //   }
 // }
 
-startScripts {
-  doFirst {
-    defaultJvmOpts = [
-      '--module-path', 'APP_HOME_LIB',
-      '--module', "${applicationModuleName}/${applicationClassName}"
-    ]
-    classpath = files()
-  }
-  doLast{
-    def bashFile = new File(outputDir, applicationLauncherName)
-    String bashContent = bashFile.text
-    bashFile.text = bashContent
-        .replaceFirst('APP_HOME_LIB',
-            java.util.regex.Matcher.quoteReplacement('$APP_HOME/lib'))
-        .replaceFirst(/(?m)^CLASSPATH=$/, '')
-        .replaceFirst(/(?m)^\s*CLASSPATH=`.+`$/, '')
-        .replaceFirst(/-classpath "\\".+\\""/, '')
-        .replaceFirst(/(?m)^eval set -- .+$/,
-            java.util.regex.Matcher.quoteReplacement(
-                'eval set -- $JAVA_OPTS $DEFAULT_JVM_OPTS "$APP_ARGS"'))
-    def batFile = new File(outputDir, applicationLauncherName + ".bat")
-    String batContent = batFile.text
-    batFile.text = batContent
-        .replaceFirst('APP_HOME_LIB',
-            java.util.regex.Matcher.quoteReplacement('%APP_HOME%\\lib'))
-        .replaceFirst(/(?m)^set CLASSPATH=$/, '')
-        .replaceFirst(/-classpath "%CLASSPATH%"/, '')
-        .replaceFirst(/(?m)^"%JAVA_EXE%" %DEFAULT_JVM_OPTS% .+$/,
-            java.util.regex.Matcher.quoteReplacement(
-                '"%JAVA_EXE%" %JAVA_OPTS% %DEFAULT_JVM_OPTS% %CMD_LINE_ARGS%'))
-  }
-}
-
 run {
   standardInput = System.in
-  doFirst {
-    // The value for task ':run' property 'mainClass' is final and
-    // cannot be changed any further (since gradle 6.4).
-    // main = ''
-    args = []
-    jvmArgs = applicationJvmArgs.collect { '"' + it + '"' }
-    jvmArgs += [
-      '"-Dfile.encoding=' + System.properties['file.encoding'] + '"',
-      '"-Duser.country=' + System.properties['user.country'] + '"',
-      '"-Duser.language=' + System.properties['user.language'] + '"',
-      '"-Duser.variant=' + System.properties['user.variant'] + '"',
-    ]
-    jvmArgs += [
-      '--module-path', classpath.asPath,
-      '--patch-module', "${applicationModuleName}=" +
-      files(sourceSets.main.output.resourcesDir).asPath,
-      '--module', "${applicationModuleName}/${applicationClassName}",
-    ]
-    jvmArgs += applicationArgs
-    classpath = files()
-  }
+  jvmArgs = platformJvmArgs
+  args = platformArgs
 }
 
 task exec(type: ru.akman.utils.ExecTask) {
@@ -541,7 +471,7 @@ task exec(type: ru.akman.utils.ExecTask) {
   dependsOn classes
   standardInput = System.in
   executable = org.gradle.internal.jvm.Jvm.current().javaExecutable
-  args = applicationJvmArgs
+  args = platformJvmArgs
   args += [
     '-Dfile.encoding=' + System.properties['file.encoding'],
     '-Duser.country=' + System.properties['user.country'],
@@ -554,7 +484,7 @@ task exec(type: ru.akman.utils.ExecTask) {
         files(sourceSets.main.output.resourcesDir).asPath,
     '--module', "${applicationModuleName}/${applicationClassName}",
   ]
-  args += applicationArgs
+  args += platformArgs
 }
 
 release {
@@ -693,7 +623,6 @@ license {
   }
   includes([
     './build.gradle',
-    './common.gradle',
     '**/*.groovy',
   ])
   excludes([
@@ -1012,6 +941,14 @@ buildDashboard {
   }
 }
 
+task processCommonResources(type: Copy) {
+  description = 'Processes common resources'
+  from "${projectDir}/config/readme/README.md"
+  into projectDir
+  expand project.properties
+}
+build.dependsOn processCommonResources
+
 ////////////////////////////////////////////////////////////////////////////////
 
 jlink {
@@ -1139,7 +1076,7 @@ jlink {
     moduleName = applicationModuleName
     mainClass = applicationClassName
     name = applicationLauncherName
-    jvmArgs = applicationJvmArgs + [ "-Dfile.encoding=${defaultEncoding}" ]
+    jvmArgs = applicationJvmArgs
     args = applicationArgs
     unixScriptTemplate = file("${jlinkTemplateNix}")
     windowsScriptTemplate = file("${jlinkTemplateWin}")
@@ -1396,14 +1333,6 @@ jlink {
         ]
         break
     }
-  }
-}
-
-jpackageImage.doLast {
-  copy {
-    from "${jpackageCommonConfigDir}"
-    include "splash.png"
-    into "${jpackageImageDir}"
   }
 }
 
